# UK_Train_TimeTable

./: .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: workflows.ci.yml
.github/workflows/: ci.yml  deploy-check.yml
src/: app.py  main.py
src/app/: app.py  router.py  settings.py
src/app/health/: __init__.py  exceptions.py  router.py  schema.py
src/app/uk_train_schedule/: controller.py  crud.py  models.py  router.py  schema.py
src/database/: session.py
tests/: conftest.py  test_app.py  test_controller.py  test_crud.py  test_database.py  test_health.py  test_health_schema.py  test_integration_journey.py  test_models.py  test_schema.py  test_settings.py
tests/features/: api_integration.feature  api_journey_success.feature  api_real_journey.feature  environment.py  journey_planning.feature  schema_validation.feature
tests/features/steps/: api_integration_steps.py  test_journey_planning_steps.py  test_schema_steps.py
