[tool.poetry]
name = "uk-train-timetable"
version = "0.1.0"
description = "UK Train Timetable project"
authors = ["Rajath Rao Web_soltZ <rajathn8@gmail.com>"]

packages = [
    { include = "app", from = "src" },
    { include = "database", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.41"
httpx = "^0.27.0"
pydantic = "^2.11.0"
pydantic-settings = "^2.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.16.0"
autoflake = "^2.3.1"
isort = "^5.13.2"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
